# DLVK

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PHASE4_COMPLETION_SUMMARY.md  PHASE4_FEATURES.md  PHASE4_REMAINING_ITEMS.md  PHASE4_ROADMAP_UPDATE.md  PHASE5_VALIDATION_COMPLETE.md  PHASE_6_1_COMPLETE.md  README.md  ROADMAP.md  actual_training_demo  advanced_model.dlvk  advanced_model.json  basic_test.cpp  demo_phase3  demo_phase3.cpp  demo_phase4_3_cnn_gpu.cpp  demo_phase5_foundation.cpp  demo_phase5_model_apis.cpp  demo_phase5_simple.cpp  enhanced_model_export  final_training_demo  linear_model.dlvk  linear_model.txt  model.csv  model.json  model_export_demo  setup.sh  simple_training_demo  standalone_export  standalone_model_demo.cpp  test_activation_only  test_activation_only.cpp  test_adam_gpu  test_adam_gpu.cpp  test_all_loss  test_all_loss_functions  test_all_loss_functions.cpp  (+67 more)
.github/: copilot-instructions.md
examples/: CMakeLists.txt  actual_training_demo.cpp  data_pipeline_demo.cpp  enhanced_model_export.cpp  final_training_demo.cpp  model_export_demo_broken.cpp  model_export_demo_clean.cpp  optimization_demo.cpp  phase4_2_showcase  phase4_2_showcase.cpp  phase4_2_training_demo.cpp  phase6_3_advanced_training_demo.cpp  phase6_demo.cpp  real_model_persistence_demo.cpp  real_model_training_demo.cpp  real_production_demo.cpp  real_training_demo.cpp  simple_network.cpp  simple_training_demo.cpp  standalone_model_export.cpp  test_activations.cpp  training_foundation_demo.cpp  training_pipeline_demo.cpp  working_training_demo.cpp
include/dlvk/: dlvk.h  production_attention.h
include/dlvk/compute/: compute_pipeline.h
include/dlvk/core/: vulkan_device.h
include/dlvk/data/: dataloader.h  dataset.h  mnist.h  transforms.h  transforms_clean.h
include/dlvk/deployment/: inference_deployment.h  multi_gpu_trainer.h  ring_all_reduce.h
include/dlvk/export/: model_export.h
include/dlvk/layers/: activation.h  batch_norm_layers.h  conv2d_layer.h  dense_layer.h  dropout_layer.h  layer.h  layer_adapters.h  modern_layer.h  modern_layers.h  pooling_layers.h  recurrent_layers.h
include/dlvk/loss/: loss_functions.h  loss_ops_gpu.h
include/dlvk/model/: callbacks.h  model.h
include/dlvk/optimization/: model_optimizer.h
include/dlvk/optimizers/: lr_scheduler.h  optimizers.h
include/dlvk/tensor/: tensor.h  tensor_ops.h  tensor_ops_static.h
include/dlvk/training/: advanced_training.h  mixed_precision.h  model_persistence.h  regularization.h  trainer.h
shaders/: adam_update.comp  avgpool2d.comp  avgpool2d_backward.comp  batch_matrix_multiply.comp  batch_norm.comp  batch_norm_backward.comp  binary_cross_entropy_backward.comp  binary_cross_entropy_forward.comp  broadcast_add.comp  clamp.comp  conv2d.comp  conv2d_backward_input.comp  conv2d_backward_weight.comp  cross_entropy_backward.comp  cross_entropy_forward.comp  dropout.comp  dropout_backward.comp  embedding_lookup.comp  layer_norm.comp  matrix_multiply.comp  maxpool2d.comp  maxpool2d_backward.comp  mse_backward.comp  mse_forward.comp  multi_head_attention.comp  production_attention.comp  reduce_sum.comp  reduce_sum_axis0.comp  relu.comp  relu_backward.comp  ring_all_reduce_add.comp  scalar_multiply.comp  sigmoid.comp  sigmoid_backward.comp  softmax.comp  sqrt.comp  tanh.comp  tanh_backward.comp  tensor_add.comp  tensor_divide.comp  (+4 more)
src/: main.cpp
src/compute/: compute_pipeline.cpp
src/core/: buffer_manager.cpp  pipeline_manager.cpp  vulkan_context.cpp  vulkan_device.cpp
src/data/: dataloader.cpp  dataset.cpp  mnist.cpp  transform_factory.cpp  transforms.cpp  transforms_clean.cpp  transforms_new.cpp  transforms_old.cpp
src/deployment/: inference_deployment.cpp  multi_gpu_trainer.cpp  ring_all_reduce.cpp
src/export/: format_specific.cpp  format_specific_clean.cpp  format_specific_old.cpp  model_export.cpp
src/layers/: activation.cpp  batch_norm_layers.cpp  conv2d_layer.cpp  conv_layer.cpp  dense_layer.cpp  dropout_layer.cpp  modern_layers.cpp  pooling_layers.cpp  recurrent_layers.cpp
src/loss/: loss_functions.cpp  loss_ops_gpu.cpp
src/model/: callbacks.cpp  model.cpp
src/optimization/: model_optimizer.cpp
src/optimizers/: adam.cpp  optimizers.cpp  sgd.cpp
src/tensor/: tensor.cpp  tensor_ops.cpp  tensor_ops_static.cpp
src/training/: advanced_training.cpp  mixed_precision.cpp  model_persistence.cpp  regularization.cpp  trainer.cpp
tests/: CMakeLists.txt  test_tensor.cpp  test_vulkan_device.cpp
